data/derived/fa15/progs/unify/prog0578.ml.out
Characters 484-485:
  let d = (eval(m, x ,y)+.eval(n, x, y)+.eval(o, x, y)) in (sqrt(sqrt(d*d))/.(3.0));;
                                                                      ^
Error: This expression has type float but an expression was expected of type
         int
